PIM-8134: Fix assets flickering (#9627)

--- a/src/Pim/Bundle/UIBundle/Resources/public/less/components/grid/Grid.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/components/grid/Grid.less
@@ -408,10 +408,6 @@
     color: white;
   }
 
-  &-bodyRow--thumbnail:hover &-subTitle {
-    display: none;
-  }
-
   &-bodyRow--thumbnail:hover &-description {
     color: white;
   }
